# patch-tool

./: .gitignore  .markdownlint.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: pypi.yaml
docs/code-style/: README.md  comments.md  imports.md  modules.md  python.md  testing-and-prs.md
src/patch_tool/: __init__.py  _diff.py  _file_lock.py  _matching.py  _normalization.py  _types.py  apply.py  diff.py  errors.py  matching.py  normalization.py  parser.py
tests/: _types.py  conftest.py  test_apply.py  test_concurrent.py  test_diff.py  test_matching.py  test_normalization.py  test_parser.py
