[project]
name = "patch-tool"
version = "0.1.0"
description = "Robust search/replace file editing for LLM-driven code changes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy",
    "black==26.1.0",
    "isort==7.0.0",
    "pyright>=1.1.408",
    "ruff>=0.14.14",
    "yamllint>=1.37.0",
]

[project.urls]
Repository = "https://github.com/yasik/patch-tool"

[tool.mypy]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patch_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
